--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <IMG src="https://content.wepik.com/statics/7514372/preview-page0.jpg">
   </header>
   <head>
-    worales
+    worales github
   </head>
   <nav> 
     <a href="https://twitter.com/home">Twitter</a>
