--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <header>
-    <IMG src="https://content.wepik.com/statics/7514372/preview-page0.jpg">
+    <IMG src="img/preview-page0.jpg">
   </header>
   <head>
   </head>
