--- a/index.html
+++ b/index.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
 <html lang="es">
   <header>
-    <IMG src="img/preview-page0.jpg">
-  </header>
+    <IMG id="imgvg" src="img/preview-page0.jpg"></IMG>
+      </header>
+
   <head>
+    <!-- CSS Personal -->
+    <link href="css/css.css" rel="stylesheet" type="text/css">
+    <!-- Librería de FA -->
+    <script src="https://kit.fontawesome.com/bf62b632a7.js" crossorigin="anonymous"></script>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
+
   <nav> 
     <a href="https://twitter.com/home">Twitter</a>
     <a href="https://www.facebook.com/">Facebook</a>
   </nav> 
-  <body>
 
+  <section id="deporte">
+   <article>
+    <h1>Deportes favoritos <i class="fa-solid fa-person-walking"></i> <i class="fa-sharp fa-solid fa-circle-exclamation"></i></h1>
+    <p>Mi unico deporte favorito es el Tennis.</p> 
+        <IMG id="imgdep" src="img/descarga.jpg"></IMG>
+   </article>
+  </section>
+
+  <section id="video">
+   <article>
+    <h1>Videos favoritos <i class="fa-sharp fa-solid fa-video"></i> <i class="fa-solid fa-photo-film"></i></h1>
+   <p>Este es uno de mis videos favoritos. </p>
+   <video src="video/clip.mp4" height="500px" controls="controls"/>
+  </article>
+  </section>
+
+  <section id="cancion">
+   <article>
+    <h1>Canciones <i class="fa-solid fa-music"></i> <i class="fa-solid fa-headphones"></i></h1>
+    <p>Estas son mis canciones favoritas</p>
+        <audio src="musica/Eminem - The Real Slim Shady (Official Video - Clean Version).mp3" controls></audio>
+        <audio src="musica/Gaur Plains (Day) - Xenoblade Chronicles- Definitive Edition Music.mp3" controls></audio>
+        <audio src="musica/Maroon 5 - One More Night (Lyric Video).mp3" type="audio/mp3" controls></audio>
+  </article>
+  </section>
+
+  <body>
+  
   </body>
+
   <footer>
-    
+    Eric Alberto Rodriguez Arechiga 361393 Fecha de realizacion de la practica: 08/10/2022 (inicio)
   </footer>
 </html>
