--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
    <article>
     <h1>Canciones <i class="fa-solid fa-music"></i> <i class="fa-solid fa-headphones"></i></h1>
     <p>Estas son mis canciones favoritas</p>
-        <audio src="musica/Eminem - The Real Slim Shady (Official Video - Clean Version).mp3" controls></audio>
-        <audio src="musica/Gaur Plains (Day) - Xenoblade Chronicles- Definitive Edition Music.mp3" controls></audio>
-        <audio src="musica/Maroon 5 - One More Night (Lyric Video).mp3" type="audio/mp3" controls></audio>
+    <p>Eminem - The Real Slim Shady</p>
+    <audio src="musica/Eminem - The Real Slim Shady (Official Video - Clean Version).mp3" controls></audio>
+    <p>Xenoblade Chronicles - Definitive Edition OST - Gaur Plains (Day)</p>
+    <audio src="musica/Gaur Plains (Day) - Xenoblade Chronicles- Definitive Edition Music.mp3" controls></audio>
+    <p>Maroon 5 - One More Night</p>
+    <audio src="musica/Maroon 5 - One More Night (Lyric Video).mp3" type="audio/mp3" controls></audio>
   </article>
   </section>
 
