--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
 
-  <nav> 
+  <nav align="center"> 
     <a href="https://twitter.com/home">Twitter</a>
     <a href="https://www.facebook.com/">Facebook</a>
   </nav> 
@@ -29,7 +29,7 @@
   <section id="video">
    <article>
     <h1>Videos favoritos <i class="fa-sharp fa-solid fa-video"></i> <i class="fa-solid fa-photo-film"></i></h1>
-   <p>Este es uno de mis videos favoritos. </p>
+   <p>Este es uno de mis videos favoritos, el v&iacutedeo es algo largo por lo que solo puse un peque&ntildeo clip, es un set de un torneo de Smash Ultimate. </p>
    <video src="video/clip.mp4" height="500px" controls="controls"/>
   </article>
   </section>
