--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section id="deporte">
    <article>
     <h1>Deportes favoritos <i class="fa-solid fa-person-walking"></i> <i class="fa-sharp fa-solid fa-circle-exclamation"></i></h1>
-    <p>Mi unico deporte favorito es el Tennis.</p> 
+    <p>Mi unico deporte favorito es el Tenis, desde peque&ntildeo me ha gustado mucho el tenis, a pesar de que no lo practico del todo, me gusta mucho ver partidas de tenis</p> 
         <IMG id="imgdep" src="img/descarga.jpg"></IMG>
    </article>
   </section>
