--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section id="cancion">
    <article>
     <h1>Canciones <i class="fa-solid fa-music"></i> <i class="fa-solid fa-headphones"></i></h1>
-    <p>Estas son mis canciones favoritas</p>
+    <p>Estas son mis canciones favoritas, una de ellas es parte de un soundtrack de mi videojuego favorito</p>
     <p>Eminem - The Real Slim Shady</p>
     <audio src="musica/Eminem - The Real Slim Shady (Official Video - Clean Version).mp3" controls></audio>
     <p>Xenoblade Chronicles - Definitive Edition OST - Gaur Plains (Day)</p>
