--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-  <header>
-    <IMG id="imgvg" src="img/preview-page0.jpg"></IMG>
-      </header>
-
+  
   <head>
     <!-- CSS Personal -->
     <link href="css/css.css" rel="stylesheet" type="text/css">
@@ -13,14 +10,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
 
-  <nav align="center"> 
+  <body>
+    <header>
+    <IMG id="imgvg" src="img/preview-page0.jpg"></IMG>
+      <nav align="center"> 
     <a href="https://twitter.com/home">Twitter</a>
     <a href="https://www.facebook.com/">Facebook</a>
   </nav> 
+   </header>
 
   <section id="deporte">
    <article>
-    <h1>Deportes favoritos <i class="fa-solid fa-person-walking"></i> <i class="fa-sharp fa-solid fa-circle-exclamation"></i></h1>
+    <h1 align="center">Deportes favoritos <i class="fa-solid fa-person-walking"></i> <i class="fa-sharp fa-solid fa-circle-exclamation"></i></h1>
     <p>Mi unico deporte favorito es el Tenis, desde peque&ntildeo me ha gustado mucho el tenis, a pesar de que no lo practico del todo, me gusta mucho ver partidas de tenis</p> 
         <IMG id="imgdep" src="img/descarga.jpg"></IMG>
    </article>
@@ -28,7 +29,7 @@
 
   <section id="video">
    <article>
-    <h1>Videos favoritos <i class="fa-sharp fa-solid fa-video"></i> <i class="fa-solid fa-photo-film"></i></h1>
+    <h1 align="center">Videos favoritos <i class="fa-sharp fa-solid fa-video"></i> <i class="fa-solid fa-photo-film"></i></h1>
    <p>Este es uno de mis videos favoritos, el v&iacutedeo es algo largo por lo que solo puse un peque&ntildeo clip, es un set de un torneo de Smash Ultimate. </p>
    <video src="video/clip.mp4" height="500px" controls="controls"/>
   </article>
@@ -36,7 +37,7 @@
 
   <section id="cancion">
    <article>
-    <h1>Canciones <i class="fa-solid fa-music"></i> <i class="fa-solid fa-headphones"></i></h1>
+    <h1 align="center">Canciones <i class="fa-solid fa-music"></i> <i class="fa-solid fa-headphones"></i></h1>
     <p>Estas son mis canciones favoritas, una de ellas es parte de un soundtrack de mi videojuego favorito</p>
     <p>Eminem - The Real Slim Shady</p>
     <audio src="musica/Eminem - The Real Slim Shady (Official Video - Clean Version).mp3" controls></audio>
@@ -47,8 +48,6 @@
   </article>
   </section>
 
-  <body>
-  
   </body>
 
   <footer>
