--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
   
   <head>
     <!-- CSS Personal -->
@@ -10,7 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
 
-  <body>
     <header>
     <IMG id="imgvg" src="img/preview-page0.jpg"></IMG>
       <nav align="center"> 
@@ -19,10 +18,11 @@
   </nav> 
    </header>
 
+  <body>
   <section id="deporte">
    <article>
     <h1 align="center">Deportes favoritos <i class="fa-solid fa-person-walking"></i> <i class="fa-sharp fa-solid fa-circle-exclamation"></i></h1>
-    <p>Mi unico deporte favorito es el Tenis, desde peque&ntildeo me ha gustado mucho el tenis, a pesar de que no lo practico del todo, me gusta mucho ver partidas de tenis</p> 
+    <p>Mi unico deporte favorito es el Tenis, desde peque&ntildeo me ha gustado mucho el tenis, a pesar de que no lo practico del todo, me gusta mucho ver partidas de tenis.</p> 
         <IMG id="imgdep" src="img/descarga.jpg"></IMG>
    </article>
   </section>
@@ -38,7 +38,7 @@
   <section id="cancion">
    <article>
     <h1 align="center">Canciones <i class="fa-solid fa-music"></i> <i class="fa-solid fa-headphones"></i></h1>
-    <p>Estas son mis canciones favoritas, una de ellas es parte de un soundtrack de mi videojuego favorito</p>
+    <p>Estas son mis canciones favoritas, una de ellas es parte de un soundtrack de mi videojuego favorito.</p>
     <p>Eminem - The Real Slim Shady</p>
     <audio src="musica/Eminem - The Real Slim Shady (Official Video - Clean Version).mp3" controls></audio>
     <p>Xenoblade Chronicles - Definitive Edition OST - Gaur Plains (Day)</p>
@@ -47,7 +47,6 @@
     <audio src="musica/Maroon 5 - One More Night (Lyric Video).mp3" type="audio/mp3" controls></audio>
   </article>
   </section>
-
   </body>
 
   <footer>
